# python-project-50

./: .flake8  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  main.yml
gendiff/: __init__.py  __main__.py
gendiff/scripts/: cli.py  gendiff.py  generate_diff.py
gendiff/scripts/formatters/: plain.py  stylish.py
hexlet_code/scripts/: gendiff.py  json_parser.py
python_project_50.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_gendiff.py
tests/test_data/: expected_diff.txt  expected_json_diff.txt  expected_nested_diff.txt  expected_plain_diff.txt  file1.yml
