[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gendiff"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["gendiff"]

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.scripts.generate_diff:generate_diff"