[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
authors = ["Your Name <your-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyYAML = "^6.0"
jsondiff = "^2.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
